--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-#  schedule:
-#    - cron: "*/300 * * * *"
+  schedule:
+    - cron: "*/300 * * * *"
 
 jobs:
   autogreen:
